# timelines

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_GOALS.md  README.en.md  README.md  package.json
.github/workflows/: build-windows.yml  build.yml  release.yml
DOC/: TimeLens_v0.10_版本更新公告.md  TimeLens_v0.12_版本更新公告.md  TimeLens_v0.14_版本更新公告.md
code/: index.html  package.json  pnpm-lock.yaml
code/src/: App.tsx  i18n.ts  (+1 more)
code/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
code/src-tauri/icons/: icon.icns
code/src-tauri/src/: lib.rs  main.rs
code/src-tauri/src/api/: commands.rs
code/src-tauri/src/core/: mod.rs
code/src-tauri/src/core/acquisition/: macos.rs  mod.rs
code/src-tauri/src/core/collection/: capture_service.rs  mod.rs  window_tracker.rs
code/src-tauri/src/core/storage/: db.rs  mod.rs
code/src-tauri/src/services/: analysis.rs
demo/: DEPLOYMENT.md  TimeLens_Prototype.html  timelens-insights-server.py  timelens-nonai-insights.html  timelens-phase2-ai-settings-mockup.html  timelens-phase2-correction-mockup.html  timelens-phase2-index.html  timelens-phase2-live.html  timelens-phase2-onboarding-mockup.html  timelens-phase2-recap-mockup.html  timelens-phase2-session-drilldown-mockup.html  timelens-phase2-theme.css  timelens-phase2-webhook-mockup.html  timelens-phase2-weekly-compare-mockup.html  timelens-phase3-formal-app-prototype.html  timelens-phase3-poster-v01-impact-stack.html  timelens-phase3-poster-v04-magazine.html  timelens-phase3-poster-v10-tomorrow.html  timelens-phase3-today-lens-prd.html  timelens-phase3-today-timeline-detail.html  timelens-product-showcase.html  timelens-seed-download.html  vercel.json
docs/: DMG打包指南.md  README.md  TimeLens_交付清单.md  TimeLens_产品迭代规范.md  TimeLens_使用说明书.md  TimeLens_开发执行记录.md  TimeLens_执行总结.md  TimeLens_种子用户说明.md
prd/: PRD_一期.md  PRD_一期_数据底座.md  PRD_一期优化版V2.md  PRD_七期_多AI渠道支持.md  PRD_三期.md  PRD_三期_用户场景与正式壳.md  PRD_九期_数据导出与本地报告.md  PRD_二期.md  PRD_二期AI增强_智能洞察.md  PRD_二期_智能洞察.md  PRD_二期截图增强_智能洞察.md  PRD_五期_Windows交互性能优化.md  PRD_八期_周报与趋势分析.md  PRD_六期_国际化i18n.md  PRD_十一期_智能提醒与专注守护.md  PRD_十七期_今日透视信息架构与可视化升级.md  PRD_十三期_用户反馈页面优化.md  PRD_十二期_页面体验优化.md  PRD_十八期_GitHub_Star增长推广与营销方案.md  PRD_十四期_时间线概括卡片展开钻取.md  PRD_十期_AI对话助手.md  PRD_四期_体验优化与分组管理.md  TimeLens_产品迭代规范.md  prd.md  prototype_v17_today_lens.html  二期_产品研发任务计划表.md  二期_分析指标字典.md  二期_里程碑与验收计划.md  五期_里程碑与验收计划.md
project/: index.html  package-lock.json  package.json  vite.config.ts
project/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.windows.conf.json
project/src-tauri/capabilities/: default.json
project/src-tauri/src/: bootstrap.rs  event_sink.rs  lib.rs  main.rs
project/src-tauri/src/analysis/: ai_client.rs  assistant.rs  daily.rs  iter_section_four_spec.rs  mod.rs  report.rs  weekly.rs  weekly_report.rs
project/src-tauri/src/api/: commands.rs  daemon_dispatch.rs  mod.rs
project/src-tauri/src/core/: intent_builtin_catalog.rs  intent_mapping.rs  mod.rs  models.rs  privacy.rs  settings.rs  time_range.rs  writer.rs
project/src-tauri/src/core/acquisition/: macos.rs  mod.rs  win.rs
project/src-tauri/src/core/aggregation/: mod.rs  pipeline.rs
project/src-tauri/src/core/collection/: capture.rs  mod.rs  notifications_listener.rs  phase2.rs  tracker.rs
project/src-tauri/src/core/nudge/: mod.rs
project/src-tauri/src/core/ocr/: engine.rs  macos_vision.rs  mod.rs  pipeline.rs  preprocess.rs  redact.rs  tsv.rs  win_ocr.rs  worker.rs
project/src-tauri/src/core/storage/: db.rs  migrations.rs  mod.rs
project/src-tauri/src/export/: csv.rs  html.rs  json.rs  markdown.rs
rule/: GEMINI.md  TimeLens_SubAgents.md  TimeLens_TechArch_Phase2.md  TimeLens_TechArch_Phase2_截图增强.md  TimeLens_TechArch_V2.md  TimeLens_Technical_Spec.md
scripts/: build-dmg.sh  release.sh  setup-macos-signing.sh
(+122 files in other folders)
