[package]
name = "timelens"
version = "0.1.0"
description = "TimeLens - Local Screenshot Timeline"
authors = ["TimeLens"]
edition = "2021"

[lib]
name = "timelens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "timelens"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
xcap = { git = "https://github.com/nashaofu/xcap" }
image = { version = "0.25", default-features = false, features = ["webp", "png", "jpeg"] }
dirs-next = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.23"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
