[package]
name = "timelens"
version = "0.7.0"
description = "TimeLens — local activity data lens (P0)"
authors = ["TimeLens"]
edition = "2021"

[lib]
name = "timelens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
rusqlite = { version = "0.39", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
crc32fast = "1.4"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", features = ["webp"] }
image_hasher = "3.1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
parking_lot = "0.12"
dirs = "6"
open = "5"
regex = "1"
libc = "0.2"
crossbeam-channel = "0.5"
webp = { version = "0.3", default-features = false, features = ["img"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
sha2 = "0.10"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSWorkspace",
  "NSRunningApplication",
  "NSImage",
  "libc",
] }
objc2-foundation = { version = "0.3", features = [
  "NSString",
  "NSData",
  "NSArray",
  "NSDictionary",
  "NSError",
  "NSObject",
] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-core-graphics = { version = "0.3", features = ["CGGeometry"] }
objc2-core-wlan = { version = "0.3", features = ["CWWiFiClient", "CWInterface"] }
objc2-user-notifications = "0.3"
objc2-vision = { version = "0.3", features = ["VNRecognizeTextRequest"] }
battery = "0.7"
block2 = "0.6"
dispatch = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
  "Win32_System_Power",
  "Win32_NetworkManagement_WiFi",
  "Win32_System_WinRT",
  "Foundation",
  "Foundation_Collections",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage",
  "Storage_Streams",
  "UI_Notifications_Management",
  "ApplicationModel",
] }
screenshots = "0.8"

[dev-dependencies]
tempfile = "3"
